[project]
name = "nvwad"
description = "A Python CLI tool to pack and unpack Neversoft PS2 WAD files."
authors = [{ name = "santiago046" }]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = ["click>=8.0.0"]
dynamic = ["version"]

[project.scripts]
nv-wadtool = "nvwad:nv_wadtool"

[project.urls]
homepage = "https://github.com/santiago046/nv-wadtool"
repository = "https://github.com/santiago046/nv-wadtool"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "nvwad.__version__" }
